--- a/src/app/components/booktable/booktable.component.html
+++ b/src/app/components/booktable/booktable.component.html
@@ -35,7 +35,7 @@
                 *ngIf="table.reservationStatus === 'Reserved'"
                 (click)="resetTable(table.tableNumber)"
                 >
-                Pay & Vacant
+                Pay
             </button>
             <button
             class="editOrder"
